--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    /* min-width: 400px; */
 }
 
 input {
@@ -15,11 +16,21 @@ input {
 button{
     background-color: #5f9341;
     padding: 12px 25px;
-    font-size: 1rem;
+    border: 1px solid #5f9341;
     color: white;
     font-weight: bold;
-    border: 0;
     margin: 5px 0;
+    border-radius: 2px;
+}
+
+#delete-btn{
+    background-color: white;
+    color: #5f9341;
+    border: 1px solid #5f9341;
+}
+
+#delete-btn:active{
+    background-color: #d8fcc2;
 }
 
 button:active{
